almost done with assignment 1